@@ -1,0 +1,7 @@
+id = dom_id(@lead)
+if params[:cancel].blank? # Show [Convert Lead] form.
+  page[id].replace_html :partial => "convert"
+  page << %Q/$("#{id}").onmouseover = $("#{id}").onmouseout = null; $("#{id}").style.background = "white";/
+else # Restore <LI> with the original properties and lead info.
+  page[id].replace :partial => "lead", :collection => [ @lead ]
+end
