@@ -14,6 +14,7 @@
   .errorExplanation ul {
     margin-left: 30px; }
     .errorExplanation ul li {
+      border: none;
       font-size: 12px;
       list-style-type: disc;
       padding: 0px; }
