@@ -126,15 +126,16 @@
   :padding 5px 15px 10px 15px
 
 .remote
-  :border 5px lavender solid
+  :border 5px lightblue solid
+  //:border 5px lavender solid
   :background whitesmoke
   :margin 0px
   :padding 0px 10px 0px 10px
 
 .buttonbar
   :border-top 1px gray solid
-  :margin 10px auto
-  :padding-top 6px
+  :margin 8px auto
+  :padding-top 8px
 
 .section input, .sidebar input, .inline input,
 .section select, .sidebar select, .inline select,
@@ -251,11 +252,6 @@
 //------------------------------------------------------------------------------
 .list
   :padding 8px 0px 0px 0px
-
-  p
-    :color #413839
-    :margin 4px 0px 0px 0px
-
   li
     :border-bottom 1px silver dotted 
     :clear both
