@@ -17,6 +17,7 @@
   ul
     :margin-left 30px
     li
+      :border none
       :font-size 12px
       :list-style-type disc
       :padding 0px
