@@ -7,6 +7,7 @@ then you win. –- Mahatma Gandhi
 Wed, Mar 4, 2008
 ---------------------------------------------------------------------
 - Refactored tools menu in lists to use block div.
+- Refactored lead conversion to use remote form.
 
 Tue, Mar 3, 2008
 ---------------------------------------------------------------------
